[gd_scene load_steps=6 format=3 uid="uid://cwjronpbw28pm"]

[ext_resource type="Script" path="res://src/Scripts/Menu.gd" id="1_ipogb"]
[ext_resource type="Script" path="res://src/Scripts/JoinDialog.gd" id="2_gq1kq"]
[ext_resource type="Script" path="res://src/Scripts/PlayerList.gd" id="2_vm4vw"]
[ext_resource type="FontFile" uid="uid://ca7s7qqfpmkyh" path="res://addons/net.yarvis.pixel_pen/resources/fonts/inter/static/Inter-Thin.ttf" id="4_liysx"]
[ext_resource type="Script" path="res://src/Scripts/ChangeNameDialog.gd" id="5_lobh0"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ipogb")

[node name="ServerDialog" type="AcceptDialog" parent="."]
initial_position = 1
size = Vector2i(219, 100)
borderless = true
dialog_text = "Server is not responsive..."

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="NameContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="NameLabel" type="Label" parent="VBoxContainer/NameContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CreateServerButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Create"

[node name="JoinServerButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="ChangeNameButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Change Name
"

[node name="CreateDialog" type="Panel" parent="."]
visible = false
layout_mode = 1
offset_right = 343.0
offset_bottom = 115.0

[node name="ScrollContainer" type="ScrollContainer" parent="CreateDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreateDialog/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelContainer" type="VBoxContainer" parent="CreateDialog/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CreateDialog/ScrollContainer/VBoxContainer/LabelContainer"]
layout_mode = 2
text = "Loading..."
horizontal_alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="CreateDialog/ScrollContainer/VBoxContainer/LabelContainer"]
layout_mode = 2
script = ExtResource("2_vm4vw")

[node name="HBoxContainer" type="HBoxContainer" parent="CreateDialog/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Start" type="Button" parent="CreateDialog/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Cancel" type="Button" parent="CreateDialog/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Cancel
"

[node name="JoinDialog" type="Panel" parent="."]
visible = false
layout_mode = 1
offset_right = 334.0
offset_bottom = 142.0
script = ExtResource("2_gq1kq")

[node name="ScrollContainer" type="ScrollContainer" parent="JoinDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="VBoxContainer" parent="JoinDialog/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConnectVBoxContainer" type="VBoxContainer" parent="JoinDialog/ScrollContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="Label" type="Label" parent="JoinDialog/ScrollContainer/MainContainer/ConnectVBoxContainer"]
layout_mode = 2
text = "Loading..."

[node name="LobbyList" type="VBoxContainer" parent="JoinDialog/ScrollContainer/MainContainer/ConnectVBoxContainer"]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="JoinDialog/ScrollContainer/MainContainer/ConnectVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.988235, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_liysx")
theme_override_font_sizes/font_size = 17

[node name="VBoxContainer" type="VBoxContainer" parent="JoinDialog/ScrollContainer/MainContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="JoinDialog/ScrollContainer/MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="JoinDialog/ScrollContainer/MainContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_vm4vw")

[node name="ButtonContainer" type="HBoxContainer" parent="JoinDialog/ScrollContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Cancel" type="Button" parent="JoinDialog/ScrollContainer/MainContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Cancel
"

[node name="ChangeNameDialog" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -828.0
offset_bottom = -464.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_lobh0")

[node name="MarginContainer" type="MarginContainer" parent="ChangeNameDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="ChangeNameDialog/MarginContainer"]
layout_mode = 2

[node name="EditName" type="LineEdit" parent="ChangeNameDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
max_length = 12

[node name="HBoxContainer" type="HBoxContainer" parent="ChangeNameDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Change" type="Button" parent="ChangeNameDialog/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Change"

[node name="Cancel" type="Button" parent="ChangeNameDialog/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel
"

[connection signal="confirmed" from="ServerDialog" to="." method="_on_server_dialog_confirmed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/CreateServerButton" to="." method="_on_create_server_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/JoinServerButton" to="." method="_on_join_server_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ChangeNameButton" to="." method="_on_change_name_button_pressed"]
[connection signal="pressed" from="CreateDialog/ScrollContainer/VBoxContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CreateDialog/ScrollContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_create_dialog_cancel_pressed"]
[connection signal="pressed" from="JoinDialog/ScrollContainer/MainContainer/ButtonContainer/Cancel" to="." method="_on_join_dialog_cancel_pressed"]
[connection signal="text_changed" from="ChangeNameDialog/MarginContainer/VBoxContainer/EditName" to="ChangeNameDialog" method="_on_edit_name_text_changed"]
[connection signal="pressed" from="ChangeNameDialog/MarginContainer/VBoxContainer/HBoxContainer/Change" to="ChangeNameDialog" method="_on_change_pressed"]
[connection signal="pressed" from="ChangeNameDialog/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_change_name_dialog_cancel_pressed"]
